fixed display issue with second animation alignment

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -40,4 +40,5 @@ p {
 
 .letters {
     display: flex;
+    justify-content: center;
 }
